@@ -94,10 +94,8 @@
     <Compile Include="MonoTorrent.Client\EventArgs\CriticalExceptionEventArgs.cs" />
     <Compile Include="MonoTorrent.Client\FileStreamBuffer.cs" />
     <Compile Include="MonoTorrent.Client\Logger.cs" />
-    <Compile Include="MonoTorrent.Client\Managers\PeerExchangeManager.cs" />
     <Compile Include="MonoTorrent.Client\ManagerWaitHandle.cs" />
     <Compile Include="MonoTorrent.Client\MessageHandler.cs" />
-    <Compile Include="MonoTorrent.Client\Messages\uTorrent\PeerExchangeMessage.cs" />
     <Compile Include="MonoTorrent.Client\PeerConnections\IPV6Connection.cs" />
     <Compile Include="MonoTorrent.Client\Piece.cs" />
     <Compile Include="MonoTorrent.Client\PiecePicking\EndGamePicker.cs" />
@@ -250,6 +248,8 @@
     <Compile Include="MonoTorrent.TorrentWatchers\TorrentWatcherEventArgs.cs" />
     <Compile Include="MonoTorrent.TorrentWatchers\TorrentWatchers.cs" />
     <Compile Include="MonoTorrent.Common\SHA1Fast.cs" />
+    <Compile Include="MonoTorrent.Client\Managers\PeerExchangeManager.cs" />
+    <Compile Include="MonoTorrent.Client\Messages\uTorrent\PeerExchangeMessage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
   <PropertyGroup>
@@ -263,7 +263,7 @@
   <ProjectExtensions>
     <MonoDevelop>
       <Properties>
-        <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="true" RelativeMakefileName="Makefile.am" IsAutotoolsProject="true" RelativeConfigureInPath="..">
+        <MonoDevelop.Autotools.MakefileInfo RelativeMakefileName="Makefile.am" IsAutotoolsProject="true" RelativeConfigureInPath="..">
           <BuildFilesVar Sync="true" Name="FILES" />
           <DeployFilesVar />
           <ResourcesVar />
