@@ -1,3 +1,8 @@
+2008-06-05  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* TrackerApp.csproj: Rename from EncryptionTypes.None ->
+	  EncryptionTypes.PlainText
+
 2007-12-18  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* Main.cs: Added comment
