@@ -1,3 +1,8 @@
+2008-06-05  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* Makefile.in, MonoTorrent.csproj, Makefile.am: Rename from
+	  EncryptionTypes.None -> EncryptionTypes.PlainText
+
 2008-05-31  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* MonoTorrent.csproj, Makefile.in, Makefile.am: Fixed up the build
